Removed link underline from wordart

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -7508,6 +7508,9 @@ body[dir="rtl"] #language-pane .language-item {
 #about-pane .client-version {
   font-size: 60%;
 }
+.wordart-link {
+  text-decoration: none !important;
+}
 .wordart {
   display: inline-block;
   *display: inline;
@@ -16818,7 +16821,7 @@ window.HtmlCtrlInterface_RefreshSettings = HtmlCtrlInterface_RefreshSettings;
 
         <!-- ABOUT ======================================================-->
         <div class="tab-pane fade" id="about-pane">
-          <a class="InfoURL" href="#">
+          <a class="InfoURL wordart-link" href="#">
             <div class="wordart">
               <div class="wordart-title text-center" data-i18n="about#wordart-title">
                 Psiphon
