--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -846,7 +846,7 @@
 
         <!-- ABOUT ======================================================-->
         <div class="tab-pane fade" id="about-pane">
-          <a class="InfoURL" href="#">
+          <a class="InfoURL wordart-link" href="#">
             <div class="wordart">
               <div class="wordart-title text-center" data-i18n="about#wordart-title">
                 Psiphon
