--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -6850,6 +6850,9 @@ a[href^=http],
 a[href^=mailto] {
   text-decoration: underline;
 }
+textarea {
+  resize: vertical;
+}
 /* HEADER AND NAV */
 .psiphon-header {
   height: 90px;
