High DPI support nearly complete

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -6,7 +6,9 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+
   <title></title>
 
   <!-- This is bootstrap-responsive.css broken into 4000-byte chunks and spread across data URIs.
@@ -1004,6 +1006,14 @@
                 <label class="checkbox inline" for="debug-AvailableEgressRegions-DE">DE</label>
               </div>
             </div>
+            <a class="btn btn-primary"><i class="icon-arrow-right"></i></a>
+          </form>
+
+          <hr>
+
+          <form class="form-inline" id="debug-UpdateDpiScaling">
+            <label>UpdateDpiScaling</label>
+            <input type="text" placeholder="1.0, 1.2, 1.5, 2.0, ..." style="width:3em">
             <a class="btn btn-primary"><i class="icon-arrow-right"></i></a>
           </form>
 
