Add mention of Android client to About page

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -882,7 +882,8 @@
           <p data-i18n="[html]about#visit-download-site">
             Please visit the website to
             <strong><a class="NewVersionURL" href="#">download a new version</a></strong>
-            or to get <strong><a class="InfoURL" href="#">help and information</a></strong>.
+            or to <strong><a class="InfoURL" href="#">get help and information</a></strong>.
+            Psiphon is available for Android and Windows.
           </p>
           <p>
             <span data-i18n="[html]about#get-by-email">
