--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -14775,6 +14775,9 @@ function onSettingsApply(e) {
   if (applySettings()) {
     // Reset the Apply button
     enableSettingsApplyButton(false);
+
+    // Switch to Connection tab
+    switchToTab('#connection-tab');
   }
   else {
     showSettingsErrorModal();
@@ -15434,15 +15437,8 @@ function showSettingsSection(section, focusElem) {
     }, 500);
   }
 
-  if ($('#settings-tab').hasClass('active')) {
-    // Settings tab already showing. Just expand and scroll.
-    onTabShown();
-  }
-  else {
-    // Settings tab not already showing. Switch to it before expanding and scrolling.
-    $('.main-nav a[href="#settings-pane"]').one('show', onTabShown);
-    $('.main-nav a[href="#settings-pane"]').tab('show');
-  }
+  // Make sure the settings tab is showing.
+  switchToTab('#settings-tab', onTabShown);
 }
 
 
@@ -15482,7 +15478,7 @@ function sendFeedback() {
   };
 
   // Switch to the connection tab
-  $('.main-nav a:first').tab('show');
+  switchToTab('#connection-tab');
 
   // Clear the feedback form
   $('.feedback-choice.selected').removeClass('selected');
@@ -15977,6 +15973,25 @@ function drawAttentionToButton(elem) {
       });
     });
   }, 10); // if this is too low, the effect seems to fail sometimes (like when a port number field is changed in settings)
+}
+
+// Make the given tab visible. `tab` may be a selector, a DOM element, or a
+// jQuery object. If `callback` is provided, it will be invoked when tab is shown.
+function switchToTab(tab, callback) {
+  var $tab = $(tab);
+  if ($tab.hasClass('active')) {
+    // Tab already showing.
+    if (callback) {
+      nextTick(callback);
+    }
+  }
+  else {
+    // Settings tab not already showing. Switch to it before expanding and scrolling.
+    if (callback) {
+      $tab.find('[data-toggle="tab"]').one('show', callback);
+    }
+    $tab.find('[data-toggle="tab"]').tab('show');
+  }
 }
 
 
