Improve browser version detection. Fix scaling of settings error alert.

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -323,7 +323,7 @@
         <!-- SETTINGS ==================================================-->
         <div class="tab-pane fade" id="settings-pane">
 
-          <div class="alert alert-error affix value-error-alert hidden"
+          <div class="alert alert-error affix value-error-alert invisible z-behind"
                data-i18n="[html]settings#error-alert">
             <strong>Error!</strong> Please fix incorrect values before proceeding.
           </div>
