--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -344,11 +344,11 @@
               <div class="accordion-heading">
                 <a class="accordion-toggle" href="#settings-accordion-systray-minimize"
                    data-toggle="collapse" data-parent="#settings-accordion">
+                  <i class="accordion-expand-icon icon-plus-square"
+                     data-icon-closed="icon-plus-square" data-icon-opened="icon-minus-square"></i>
                   <span data-i18n="settings#systray-minimize#heading">
                     Minimize to Notification Area (System Tray)
                   </span>
-                  <i class="accordion-expand-icon icon-plus-square ie7Remove"
-                     data-icon-closed="icon-plus-square" data-icon-opened="icon-minus-square"></i>
                 </a>
               </div>
               <div id="settings-accordion-systray-minimize" class="accordion-body collapse">
@@ -387,12 +387,12 @@
               <div class="accordion-heading">
                 <a class="accordion-toggle" href="#settings-accordion-split-tunnel"
                    data-toggle="collapse" data-parent="#settings-accordion">
+                  <i class="accordion-expand-icon icon-plus-square"
+                     data-icon-closed="icon-plus-square" data-icon-opened="icon-minus-square"></i>
                   <span data-i18n="settings#split-tunnel#heading">
                     Split Tunnel
                   </span>
-                  <i class="accordion-expand-icon icon-plus-square ie7Remove"
-                     data-icon-closed="icon-plus-square" data-icon-opened="icon-minus-square"></i>
-                  <span class="label label-warning vpn-incompatible-msg ie7Remove">
+                  <span class="label label-warning vpn-incompatible-msg">
                     <i class="icon-prohibited"></i>
                     <span data-i18n="settings#vpn-incompatible-label">L2TP/IPSec</span>
                   </span>
@@ -436,12 +436,12 @@
               <div class="accordion-heading">
                 <a class="accordion-toggle" href="#settings-accordion-egress-region"
                    data-toggle="collapse" data-parent="#settings-accordion">
+                  <i class="accordion-expand-icon icon-plus-square"
+                     data-icon-closed="icon-plus-square" data-icon-opened="icon-minus-square"></i>
                   <span data-i18n="settings#egress-region#heading">
                     Psiphon Server Region
                   </span>
-                  <i class="accordion-expand-icon icon-plus-square ie7Remove"
-                     data-icon-closed="icon-plus-square" data-icon-opened="icon-minus-square"></i>
-                  <span class="label label-warning vpn-incompatible-msg ie7Remove">
+                  <span class="label label-warning vpn-incompatible-msg">
                     <i class="icon-prohibited"></i>
                     <span data-i18n="settings#vpn-incompatible-label">L2TP/IPSec</span>
                   </span>
@@ -538,12 +538,12 @@
               <div class="accordion-heading">
                 <a class="accordion-toggle" href="#settings-accordion-local-proxy-ports"
                    data-toggle="collapse" data-parent="#settings-accordion">
+                  <i class="accordion-expand-icon icon-plus-square"
+                     data-icon-closed="icon-plus-square" data-icon-opened="icon-minus-square"></i>
                   <span data-i18n="settings#local-proxy-ports#heading">
                     Local Proxy Ports
                   </span>
-                  <i class="accordion-expand-icon icon-plus-square ie7Remove"
-                     data-icon-closed="icon-plus-square" data-icon-opened="icon-minus-square"></i>
-                  <span class="label label-warning vpn-incompatible-msg ie7Remove">
+                  <span class="label label-warning vpn-incompatible-msg">
                     <i class="icon-prohibited"></i>
                     <span data-i18n="settings#vpn-incompatible-label">L2TP/IPSec</span>
                   </span>
@@ -607,11 +607,11 @@
               <div class="accordion-heading">
                 <a class="accordion-toggle" href="#settings-accordion-upstream-proxy"
                    data-toggle="collapse" data-parent="#settings-accordion">
+                  <i class="accordion-expand-icon icon-plus-square"
+                     data-icon-closed="icon-plus-square" data-icon-opened="icon-minus-square"></i>
                   <span data-i18n="settings#upstream-proxy#heading">
                     Upstream Proxy
                   </span>
-                  <i class="accordion-expand-icon icon-plus-square ie7Remove"
-                     data-icon-closed="icon-plus-square" data-icon-opened="icon-minus-square"></i>
                 </a>
               </div>
               <div id="settings-accordion-upstream-proxy" class="accordion-body collapse">
@@ -684,11 +684,11 @@
               <div class="accordion-heading">
                 <a class="accordion-toggle" href="#settings-accordion-transport-mode"
                    data-toggle="collapse" data-parent="#settings-accordion">
+                  <i class="accordion-expand-icon icon-plus-square"
+                     data-icon-closed="icon-plus-square" data-icon-opened="icon-minus-square"></i>
                   <span data-i18n="settings#transport-mode#heading">
                     Transport Mode
                   </span>
-                  <i class="accordion-expand-icon icon-plus-square ie7Remove"
-                     data-icon-closed="icon-plus-square" data-icon-opened="icon-minus-square"></i>
                 </a>
               </div>
               <div id="settings-accordion-transport-mode" class="accordion-body collapse">
